Changed Colors, Fixed Horizontal Scrollbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,29 +3,28 @@
   font-family: Quicksand;
   font-style: normal;
   font-weight: bold;
-  font-size:12vw;
-  line-height: 225px;
-  /* identical to box height */
-  text-align: center;
-  color: #ffffff;
+  font-size: 12vw;
   letter-spacing: 0.7em;
-  margin-right: -0.7em;
+  margin-left: 0.7em;
+
+  color: #FA80A4;
+  line-height: 50vw;
+
+  text-align: center;
+  
   -webkit-animation: letter-spacing 1.3s;
   animation: letter-spacing 1.3s;
 }
 
 @-webkit-keyframes letter-spacing {
-  0%   { letter-spacing: 0em; margin-right: 0em;}
-  100% { letter-spacing: 0.7em; margin-right: -0.7em;}
+  0%   { letter-spacing: 0em; margin-left: 0em;}
+  100% { letter-spacing: 0.7em; margin-left: 0.7em;}
 }
 @keyframes letter-spacing {
-  0%   { letter-spacing: 0em; margin-right: 0em;}
-  100% { letter-spacing: 0.7em; margin-right: -0.7em;}
+  0%   { letter-spacing: 0em; margin-left: 0em;}
+  100% { letter-spacing: 0.7em; margin-left: 0.7em;}
 }
 
 body {
-  width: 100%;
-  height: 100%;
-  background: #000000;
-  color: #f0f0f0;
+  background: #2A2543;
 }
